package com.qa.microservices.testing;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Base class for contract testing implementation.
 * Design Decision: Provides foundation for consumer-driven contract testing.
 * This ensures API compatibility between services during development.
 */
public abstract class ContractTestBase {
    protected static final Logger logger = LoggerFactory.getLogger(ContractTestBase.class);
    
    /**
     * Validate API contract compliance.
     * Design Decision: Abstract method to be implemented by specific contract tests.
     */
    public abstract boolean validateContract(String serviceUrl, String contractDefinition);
    
    /**
     * Generate contract from API interactions.
     * Design Decision: Captures actual API behavior for contract generation.
     */
    public abstract String generateContract(String serviceName, String version);
    
    /**
     * Compare contracts for breaking changes.
     * Design Decision: Identifies backward compatibility issues early in development.
     */
    public boolean compareContracts(String oldContract, String newContract) {
        // Simplified contract comparison logic
        logger.info("Comparing contracts for breaking changes");
        
        // In real implementation, this would parse and compare JSON schemas
        if (oldContract == null || newContract == null) {
            return false;
        }
        
        // Basic validation - in practice, use proper JSON schema comparison
        return newContract.contains("\"version\"") && 
               newContract.length() >= oldContract.length() * 0.8; // Allow 20% reduction
    }
    
    /**
     * Validate response schema against contract.
     */
    protected boolean validateResponseSchema(String response, String expectedSchema) {
        logger.info("Validating response schema");
        
        // Simplified schema validation
        if (response == null || expectedSchema == null) {
            return false;
        }
        
        // Basic JSON structure validation
        return response.trim().startsWith("{") && 
               response.trim().endsWith("}") &&
               response.contains("\"id\"");
    }
    
    /**
     * Log contract validation results.
     */
    protected void logValidationResult(String serviceName, boolean isValid, String details) {
        if (isValid) {
            logger.info("Contract validation PASSED for service: {} - {}", serviceName, details);
        } else {
            logger.error("Contract validation FAILED for service: {} - {}", serviceName, details);
        }
    }
}
